--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>Depeche Mode</title>
   <base href="/">
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/383fa6a3f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
